<resources>
    <string name="app_name">My Stocks</string>
    <string name="sample_word">AAA</string>
    <string name="sample_digit">99.9</string>
    <string name="asset">Asset</string>
    <string name="history">History</string>
    <string name="report">Report</string>
    <string name="symbol">Symbol</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="shares">Shares</string>
    <string name="order">Order</string>
    <string name="action">Action</string>
    <string name="stop_loss">StopLoss</string>
    <string name="profit">Gain/Loss</string>
    <string name="submit">Submit</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_fab">Order</string>
    <string name="under_construction">Under Construction</string>
    <string name="win_rate">WinRate</string>
    <string name="sample_percent">99.9%</string>
    <string name="gain">Gain</string>
    <string name="loss">Loss</string>
    <string name="gross_profit">Gross Profit</string>
    <string name="trading">Trading</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="hint_calendar">Date Picker</string>
    <string name="zero">0.00</string>
    <string name="search">Search</string>
</resources>